--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "electron": "^4.0.3"
+    "electron": "^4.0.3",
+    "react-markdown": "^4.0.6"
   }
 }
