--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "css-loader": "^2.0.0",
     "file-loader": "^2.0.0",
@@ -28,7 +29,7 @@
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
-    "react-ace": "^6.2.0",
+    "react-ace": "^6.4.0",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
@@ -41,7 +42,6 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "electron": "^4.0.3",
-    "react-markdown": "^4.0.6"
+    "electron": "^4.0.3"
   }
 }
