--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "marked": "^0.6.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-ace": "^6.4.0",
