--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "css-loader": "^2.0.0",
+    "electron-packager": "^13.1.0",
     "file-loader": "^2.0.0",
     "glob": "^7.1.3",
     "jquery": "^3.3.1",
