--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "dev": "webpack --mode development -w"
+    "dev": "webpack --mode development -w",
+    "package": "electron-packager . --ignore=node_modules --overwrite"
   },
   "author": "",
   "license": "ISC",
